# LanChGo

./: .gitignore  Cargo.toml  LICENSE  README.md  README.txt  app_icon.aps  app_icon.rc  build.rs
Windows/: Cargo.toml  app_icon.rc  build.rs
Windows/src/: classes.rs  file_transfer_protocol.rs  main.rs  main_helpers.rs  phone_protocol.rs  secure_channel_code.rs  tcp_file_client.rs  tcp_file_server.rs  udp_receiver.rs
Windows/ui/: app-window.slint  app-window.slint-backup.txt
Windows/ui/components/: ChatInput.slint  ChatPanel.slint  FileTransferPanel.slint  HeaderBar.slint  StatusBadges.slint  Toolbar.slint  WelcomeOverlay.slint  types.slint
src/: classes.rs  drag_and_drop_files.rs  file_transfer_protocol.rs  main.rs  main_helpers.rs  mobile_download.rs  phone_protocol.rs  secure_channel_code.rs  tcp_file_client.rs  tcp_file_server.rs  tray.rs  udp_receiver.rs  web_app.rs  web_app_file_transfer.rs
src/Tools/: SSS.rs  keyboard_translator.rs  mod.rs  tools_action_translator.rs  tools_handshake.rs  touchpad_translator.rs
ui/: app-window.slint  app-window.slint-backup.txt
ui/components/: AboutPopup.slint  ChatInput.slint  ChatPanel.slint  FileTransferPanel.slint  HeaderBar.slint  HelpFunctions.slint  StatusBadges.slint  Toolbar.slint  WelcomeOverlay.slint  dropfilefortransfer.slint  types.slint
ui/components/Tools/: DevicesList.slint  SSS.slint
ui/components/Tools UI/: DevicesList.slint
web_app/: app.js  index.html  styles.css
