[package]
name = "slint-rust-template"
version = "1.6.0"
edition = "2021"

[[bin]]
name = "LanChGo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
directories = "6.0.0"
dirs = "6.0.0"
get_if_addrs = "0.5.3"
image = "0.25.8"
ipconfig = "0.3.2"
local-ip-address = "0.6.5"
pbkdf2 = "0.12.2"
qrcode = "0.14.1"
rand = "0.9.2"
rfd = "0.15.4"
rodio = "0.21.1"
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
slint = "1.14.1"
walkdir = "2.5.0"
zeroize = "1.8.1"
zip = "7.2.0"
uuid = { version = "1.19.0", features = ["v4"] }
open = "5.3.3"
crossbeam-utils = "0.8.21"
semaphore = "0.4.0"
axum = { version = "0.8.8", features = ["ws"] }
tower-http = "0.6.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "fs"] }
arboard = "3.6.1"
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", features = ["io"] }

[build-dependencies]
slint-build = "1.14.1"
embed-resource = "2.4"
