[package]
name = "slint-rust-template"
version = "1.3.4"
edition = "2021"

[[bin]]
name = "LanChGo"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
dirs = "6.0.0"
get_if_addrs = "0.5.3"
image = "0.25.8"
ipconfig = "0.3.2"
local-ip-address = "0.6.5"
pbkdf2 = "0.12.2"
port_check = "0.3.0"
qrcode = "0.14.1"
rand = "0.9.2"
rfd = "0.15.4"
rodio = "0.21.1"
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
slint = "1.12.1"
zeroize = "1.8.1"

[build-dependencies]
slint-build = "1.12.1"
embed-resource = "2.4"
